<!--
  ~ Copyright 2012. Kolja Dummann <k.dummann@gmail.com>
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>

    <string name="app_name">Trainmonitor Beta</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Trainmonitor Beta</string>
    <string name="title_activity_my_trains">My Trains</string>
    <string name="title_activity_train">Train</string>
    <string name="train_details_error">Error while fetching train details</string>
    <string name="error_no_connection">Your internet connection is currently unavailable</string>
    <string name="train_id">Train number:</string>
    <string name="error_getting_trains">Error getting trains from Server please check your connection</string>
    <string name="progess_getting_train_details">Getting train details...</string>
    <string name="stations">Stations:</string>
    <string name="refresh_trains_1">Contacting server</string>
    <string name="refresh_trains_2">Clearing local cache</string>
    <string name="refresh_trains_3">Processed train %1$s of %2$s</string>
    <string name="disclaimer_header">Disclaimer</string>
    <string name="disclaimer">This program is not related with Deutsche Bahn. All information provided by this software
        are not official approved b Deutsche Bahn.
        If you need reliable information please use the services provided directly by Deutsche Bahn.
    </string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="next_refresh">next refresh:</string>
    <string name="notification_message">Train %1$s is late</string>
    <string name="notification_detail">%1$s minutes delayed</string>
    <string name="choose_account_title">Choose Account</string>

    <!-- Settings strings -->
    <string name="settings_summary_general">General Settings</string>
    <string name="settings_general">General Settings</string>
    <string name="settings_summary_about">about Trainmonitor</string>
    <string name="settings_about">About</string>
    <string name="settings_about_website">Website</string>
    <string name="settings_about_license">License</string>
    <string name="settings_about_summary_donate">If you like the App you might like to buy me beer</string>
    <string name="settings_about_donate">Donate</string>
    <string name="settings_summary_notify">Whenever a train is late, Trainmonitor will display a notification.</string>
    <string name="settings_notify">Notifications</string>
    <string name="settings_summary_account">Tab to choose an account</string>
    <string name="settings_account">Account</string>
    <string name="error_getting_stations">Error getting stations from server</string>
    <string name="error_reading_trains">Error reading trains</string>
    <string name="search">Search</string>
    <string name="menu_image">menu image</string>
    <string name="menu_all_trains">All Trains</string>
    <string name="menu_fav_trains">My Trains</string>
    <string name="show">show train details</string>
    <string name="Settings">Settings</string>
    <string name="train_sync">Train synchronisation</string>
    <string name="train_sync_starting">synchronisation starting</string>
    <string name="train_sync_completed">synchronisation completed</string>

</resources>
