<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2012. Kolja Dummann <k.dummann@gmail.com>
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen
            android:summary="@string/settings_summary_general"
            android:title="@string/settings_general" >

        <CheckBoxPreference
                android:defaultValue="@string/settings_default_notify"
                android:key="notify_on"
                android:summary="@string/settings_summary_notify"
                android:title="@string/settings_notify" />
        <Preference android:key="current_account"
                            android:title="@string/settings_account">
            <intent
                    android:targetClass="ws.logv.trainmonitor.ui.ChooseAccountActivity"
                    android:targetPackage="ws.logv.trainmonitor" />
                            </Preference>
</PreferenceScreen>

    <PreferenceScreen
            android:summary="@string/settings_summary_about"
            android:title="@string/settings_about" >
        <Preference
                android:key="about_version"
                android:title="@string/settings_about_version" />
        <Preference
                android:key="about_website"
                android:summary="@string/url_trainmonitor_website"
                android:title="@string/settings_about_website" >
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="@string/url_trainmonitor_website" />
        </Preference>
        <Preference
                android:key="about_license"
                android:title="@string/settings_about_license" >
        </Preference>
        <Preference
                android:key="about_donate"
                android:summary="@string/settings_about_summary_donate"
                android:title="@string/settings_about_donate" >
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="@string/uri_trainmonitor_donate" />
        </Preference>
    </PreferenceScreen>
</PreferenceScreen>